# Alert-bot-safe

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/alertbot/: config.py  fetcher.py  main.py  notifier.py  parser.py  reservation.py  storage.py
systemd/: alertbot.service
